# barcode-scanner

./: .gitignore  GUI.py  README.md  pyproject.toml
.github/workflows/: python-tests.yml
src/: ViewScreens.py  main.py
src/Email/: EmailMain.py  __init__.py  email_service.py
src/GUI/: BorrowPage.py  BorrowedItemsPage.py  ConfirmationPage.py  GUImain.py  LoadingPage.py  ReturnPage.py  ScanIDPage.py  TimeoutPage.py  ViewScreens.py  app.py  gui_constants.py  popup.py  session_manager.py
src/backend/: app_state.py  backend_constants.py  backend_types.py  endpoints.py  requests.py  singleton_storage.py
src/static/: README.md  desktop.ini
tests/: conftest.py
tests/backend/: test_endpoints.py  test_requests.py
tests/email/: test_email_edge_cases.py  test_email_service.py
tests/gui/: test_gui_pages.py  test_gui_stress_and_edge_cases.py  test_popup.py  test_session_manager.py
tests/integration/: test_live_endpoints.py
