[project]
name = "barcode-scanner"
version = "0.1.0"
description = "A barcode scanning tool for Olin College of Engineering equipment."
authors = [
    {name = "Your Name",email = "you@example.com"}
]
package-mode = false
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "customtkinter (>=5.2.2,<6.0.0)",
    "pillow (>=12.2.0,<13.0.0)",
    "pandas (>=3.0.3,<4.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "quart (>=0.20.0,<0.21.0)",
    "requests-async (>=0.2.4,<0.3.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
